# fortrand

./: CMakeLists.txt  DOCUMENTATION.md  README.md  example.f90
src/: CMakeLists.txt  random.f90  sampling.f90
